--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "history": "^4.6.3",
+    "js-cookie": "^2.1.4",
     "merge": "^1.2.0",
     "store": "^2.0.12"
   },
